Fix page height larger than Safari visible height

--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,8 @@ p {
 }
 
 .app {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
